--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <div class="card-body">
               <h2 class="price-text">$26.99</h2>
-              <img src="./images/C9_large.jpg" width="80%" alt="c9" />
+              <img src="./images/c9_large.jpg" width="80%" alt="c9" />
               <p>Lorem ipsum dolor</p>
               <p>Hendrerit dolor magna</p>
               <p>Hendrerit dolor magna</p>
